--- a/life.html
+++ b/life.html
@@ -147,7 +147,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
     </div>
   </div>
 
-<iframe height=300 width=300 src='http://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
+<iframe height=300 width=300 src='https://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
 <br>
  <iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
 
