--- a/life.html
+++ b/life.html
@@ -147,9 +147,9 @@ notselectedpage" href="me.html">Contact</a></div></li>
     </div>
   </div>
 
-<iframe height=300 width=300 src='//player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
+<iframe height=300 width=300 src='https://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
 <br>
- <iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
+ <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe> -->
 
 
 
