--- a/life.html
+++ b/life.html
@@ -147,7 +147,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
     </div>
   </div>
 
-<iframe height=300 width=300 src='https://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
+<iframe height=300 width=300 src='http://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
 <br>
  <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe> -->
 
@@ -268,7 +268,10 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <script src="js/plugins.js"></script>
   <script src="js/sly.min.js"></script>
   <script src="js/sendemailfunc.js"></script> -->
-  
+  <script type="text/javascript" src="https://players.youku.com/jsapi"></script>
+<script type="text/javascript">
+   new YKU.Player('embed1',{ styleid: '0', client_id: 'my_id', vid: 'xx' });
+</script>
   
   <script src="js/jquery.js"></script>
   <script src="js/test.js"></script>
