--- a/life.html
+++ b/life.html
@@ -10,7 +10,10 @@
     document.createElement("picture");
   </script>
   <script src="js/polyfill.min.js"></script>
-
+<script type="text/javascript" src="https://players.youku.com/jsapi"></script>
+<script type="text/javascript">
+   new YKU.Player('embed1',{ styleid: '0', client_id: 'my_id', vid: 'xx' });
+</script>
       <!--
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="css/opensans.css">
@@ -147,7 +150,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
     </div>
   </div>
 
-<iframe height=300 width=300 src='https://player.youku.com/embed/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
+<iframe height=300 width=300 src='https://player.youku.com/embed1/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
 <br>
  <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe> -->
 
@@ -268,10 +271,8 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <script src="js/plugins.js"></script>
   <script src="js/sly.min.js"></script>
   <script src="js/sendemailfunc.js"></script> -->
-  <script type="text/javascript" src="https://players.youku.com/jsapi"></script>
-<script type="text/javascript">
-   new YKU.Player('embed1',{ styleid: '0', client_id: 'my_id', vid: 'xx' });
-</script>
+  
+
   
   <script src="js/jquery.js"></script>
   <script src="js/test.js"></script>
