--- a/life.html
+++ b/life.html
@@ -10,10 +10,7 @@
     document.createElement("picture");
   </script>
   <script src="js/polyfill.min.js"></script>
-<script type="text/javascript" src="https://players.youku.com/jsapi"></script>
-<script type="text/javascript">
-   new YKU.Player('embed1',{ styleid: '0', client_id: 'my_id', vid: 'xx' });
-</script>
+
       <!--
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700,200,100' rel='stylesheet' type='text/css'>-->
     <link rel="stylesheet" href="css/opensans.css">
@@ -123,7 +120,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 
   <div class="col-12 gallery">
-
+<!-- 
     <a target="_blank" href="https://www.youtube.com/watch?v=NYH3gt4V8GQ">
       <div class="gallery-image" id="hokkaido-img">
         <div class="darker"></div>
@@ -132,13 +129,13 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
     <div>
     <h6 class="gallery-text">Do you remember that summer?</h6>
-    </div>
-
+    </div> -->
+<iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
   </div>
 
 
   <div class="col-12 gallery gallery-right">
-
+<!-- 
     <a target="_blank" href="https://www.youtube.com/watch?v=dOVX0E1qxsc">
     <div class="gallery-image" id="hkust-img">
       <div class="darker"></div>
@@ -147,11 +144,11 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
     <div>
     <h6 class="gallery-text">For my HKUST</h6>
-    </div>
+    </div> -->
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>
   </div>
 
-<iframe height=300 width=300 src='http://player.youku.com/embed1/XNjIzMjg1MTE2' frameborder=0 'allowfullscreen'></iframe>
-<br>
+
  <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe> -->
 
 
