--- a/life.html
+++ b/life.html
@@ -130,7 +130,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
     <div>
     <h6 class="gallery-text">Do you remember that summer?</h6>
     </div> -->
-<iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
+<iframe  height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
   </div>
 
 
@@ -145,7 +145,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
     <div>
     <h6 class="gallery-text">For my HKUST</h6>
     </div> -->
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>
+    <iframe  height="315" src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>
   </div>
 
 
