--- a/life.html
+++ b/life.html
@@ -120,6 +120,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 
   <div class="col-12 gallery">
+  <iframe src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
 <!-- 
     <a target="_blank" href="https://www.youtube.com/watch?v=NYH3gt4V8GQ">
       <div class="gallery-image" id="hokkaido-img">
@@ -130,11 +131,10 @@ notselectedpage" href="me.html">Contact</a></div></li>
     <div>
     <h6 class="gallery-text">Do you remember that summer?</h6>
     </div> -->
-<iframe width="100%" height="100%" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
   </div>
 
-
   <div class="col-12 gallery gallery-right">
+  <iframe src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>
 <!-- 
     <a target="_blank" href="https://www.youtube.com/watch?v=dOVX0E1qxsc">
     <div class="gallery-image" id="hkust-img">
@@ -145,11 +145,9 @@ notselectedpage" href="me.html">Contact</a></div></li>
     <div>
     <h6 class="gallery-text">For my HKUST</h6>
     </div> -->
-    <iframe width="100%" height="100%" src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>
+    
   </div>
 
-
- <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe> -->
 
 
 
