--- a/life.html
+++ b/life.html
@@ -120,7 +120,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 
   <div class="col-12 gallery">
-  <iframe src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe>
+  <!-- <iframe src="https://www.youtube.com/embed/NYH3gt4V8GQ" frameborder="0" allowfullscreen></iframe> -->
 <!-- 
     <a target="_blank" href="https://www.youtube.com/watch?v=NYH3gt4V8GQ">
       <div class="gallery-image" id="hokkaido-img">
@@ -134,7 +134,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
   </div>
 
   <div class="col-12 gallery gallery-right">
-  <iframe src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>
+  <!-- <iframe src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe> -->
 <!-- 
     <a target="_blank" href="https://www.youtube.com/watch?v=dOVX0E1qxsc">
     <div class="gallery-image" id="hkust-img">
