--- a/life.html
+++ b/life.html
@@ -120,10 +120,9 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 
   <div class="col-12 gallery">
-  <iframe src="https://www.youtube.com/embed/hRRGF-sdoc4" frameborder="0" allowfullscreen></iframe>
+  <!-- <iframe src="https://www.youtube.com/embed/hRRGF-sdoc4" frameborder="0" allowfullscreen></iframe>-->
 
-<!-- 
-    <a target="_blank" href="https://www.youtube.com/watch?v=NYH3gt4V8GQ">
+    <a target="_blank" href="http://player.youku.com/player.php/sid/XMTg0MjYwMTg2NA==/v.swf">
       <div class="gallery-image" id="hokkaido-img">
         <div class="darker"></div>
       </div>
@@ -131,13 +130,16 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
     <div>
     <h6 class="gallery-text">Do you remember that summer?</h6>
-    </div> -->
+    </div> 
+
+
   </div>
 
   <div class="col-12 gallery gallery-right">
-  <iframe src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>
-<!-- 
-    <a target="_blank" href="https://www.youtube.com/watch?v=dOVX0E1qxsc">
+ <!--  <iframe src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>-->
+
+
+    <a target="_blank" href="http://player.youku.com/player.php/sid/XNjIzMjg1MTE2/v.swf">
     <div class="gallery-image" id="hkust-img">
       <div class="darker"></div>
     </div>
@@ -145,7 +147,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
     <div>
     <h6 class="gallery-text">For my HKUST</h6>
-    </div> -->
+    </div> 
     
   </div>
 
