--- a/life.html
+++ b/life.html
@@ -122,7 +122,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <div class="col-12 gallery">
   <!-- <iframe src="https://www.youtube.com/embed/hRRGF-sdoc4" frameborder="0" allowfullscreen></iframe>-->
 
-    <a target="_blank" href="http://player.youku.com/player.php/sid/XMTg0MjYwMTg2NA==/v.swf">
+    <a target="_blank" href="http://http://v.youku.com/v_show/id_XMTg0MjYwMTg2NA==.html?spm=a2hzp.8253869.0.0&from=y1.7-2#paction">
       <div class="gallery-image" id="hokkaido-img">
         <div class="darker"></div>
       </div>
@@ -139,7 +139,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
  <!--  <iframe src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>-->
 
 
-    <a target="_blank" href="http://player.youku.com/player.php/sid/XNjIzMjg1MTE2/v.swf">
+    <a target="_blank" href="http://http://v.youku.com/v_show/id_XNjIzMjg1MTE2.html?spm=a2hzp.8253869.0.0&from=y1.7-2">
     <div class="gallery-image" id="hkust-img">
       <div class="darker"></div>
     </div>
