--- a/life.html
+++ b/life.html
@@ -156,6 +156,38 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 </div>
 
+
+<div class="row gallery-container">
+
+
+  <div class="col-12 gallery">
+  <!-- <iframe src="https://www.youtube.com/embed/hRRGF-sdoc4" frameborder="0" allowfullscreen></iframe>-->
+
+    <a target="_blank" href="http://v.youku.com/v_show/id_XMTg3Mzc5MzQ2MA==.html#paction">
+      <div class="gallery-image" id="inspirationlake-img">
+        <div class="darker"></div>
+      </div>
+    </a>
+
+    <div>
+    <h6 class="gallery-text">Sunny day afternoon</h6>
+    </div> 
+
+
+  </div>
+
+ 
+
+
+
+
+</div>
+
+
+
+
+
+
 <div id="temporary"></div>
 <!--
       <div class="swipeboxEx justified-gallery">
