--- a/life.html
+++ b/life.html
@@ -180,7 +180,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
  <!--  <iframe src="https://www.youtube.com/embed/dOVX0E1qxsc" frameborder="0" allowfullscreen></iframe>-->
 
 
-    <a target="_blank" href="http://http://v.youku.com/v_show/id_XMjQ5MTExODUyMA==.html?from=s1.8-1-1.2&spm=a2h0k.8191407.0.0#paction">
+    <a target="_blank" href="http://v.youku.com/v_show/id_XMjQ5MTExODUyMA==.html?from=s1.8-1-1.2&spm=a2h0k.8191407.0.0#paction">
     <div class="gallery-image" id="taidong-img">
       <div class="darker"></div>
     </div>
