--- a/life.html
+++ b/life.html
@@ -123,7 +123,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <!-- <iframe src="https://www.youtube.com/embed/hRRGF-sdoc4" frameborder="0" allowfullscreen></iframe>-->
 
     <a target="_blank" href="http://v.youku.com/v_show/id_XMTg0MjYwMTg2NA==.html?spm=a2hzp.8253869.0.0&from=y1.7-2#paction">
-      <div class="gallery-image" id="hokkaido-img">
+      <div class="gallery-image video-image" id="hokkaido-img">
         <div class="darker"></div>
       </div>
     </a>
@@ -140,7 +140,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 
     <a target="_blank" href="http://v.youku.com/v_show/id_XNjIzMjg1MTE2.html?spm=a2hzp.8253869.0.0&from=y1.7-2">
-    <div class="gallery-image" id="hkust-img">
+    <div class="gallery-image video-image" id="hkust-img">
       <div class="darker"></div>
     </div>
     </a>
@@ -164,7 +164,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
   <!-- <iframe src="https://www.youtube.com/embed/hRRGF-sdoc4" frameborder="0" allowfullscreen></iframe>-->
 
     <a target="_blank" href="http://v.youku.com/v_show/id_XMTg3Mzc5MzQ2MA==.html#paction">
-      <div class="gallery-image" id="inspirationlake-img">
+      <div class="gallery-image video-image" id="inspirationlake-img">
         <div class="darker"></div>
       </div>
     </a>
@@ -181,7 +181,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 
     <a target="_blank" href="http://v.youku.com/v_show/id_XMjQ5MTExODUyMA==.html?from=s1.8-1-1.2&spm=a2h0k.8191407.0.0#paction">
-    <div class="gallery-image" id="taidong-img">
+    <div class="gallery-image video-image" id="taidong-img">
       <div class="darker"></div>
     </div>
     </a>
