--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
 <div class="row aboutme">
   <div class="col-12 mypic-box" style="border: 0px solid red;">
-    <img class="mypic" src="img/mypic.png" />
+    <img class="mypic" src="img/mypic2.png" />
   </div>
   <div class="col-12 myintro" style="border: 0px solid blue;">
      <p id="me-intro-p">
