--- a/me214.html
+++ b/me214.html
@@ -17,9 +17,9 @@
     <link rel="stylesheet" href="css/css.css">
     <!-- <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/ospb.css">
-    <link rel="stylesheet" href="css/socicon.css">
+    <link rel="stylesheet" href="css/socicon.css">-->
     <link rel="stylesheet" href="css/ring.css">
- -->
+ 
  <link rel="stylesheet" href="css/socicon.css">
     <link rel="stylesheet" href="css/swipebox.min.css" />
     <link rel="stylesheet" href="css/justifiedGallery.css" />
@@ -37,10 +37,14 @@
 
 <nav id="drawer">
   <ul>
-    <a href="pre-wedding.html"><li ><div>Pre-wedding</div></li></a>
-    <a href="portrait.html"><li ><div>Portrait</div></li></a>
-    <a href="travel.html"><li ><div>Landscape</div></li></a>
-    <a href="life.html"><li ><div>Video</div></li></a>
+    <a href="pre-wedding.html"><li class="
+notselectedpage"><div>Pre-wedding</div></li></a>
+    <a href="portrait.html"><li class="
+notselectedpage"><div>Portrait</div></li></a>
+    <a href="travel.html"><li class="
+notselectedpage"><div>Landscape</div></li></a>
+    <a href="life.html"><li class="
+notselectedpage"><div>Video</div></li></a>
     <a href="me.html"><li ><div>Contact</div></li></a>
 
   </ul>
@@ -74,14 +78,14 @@
 <div class="h-menu">
    <ul>
         <li class="horizontal"><a class="
-notselectedpage" href="pre-wedding.html">Pre-wedding</a></li>
+notselectedpage"  href="pre-wedding.html">Pre-wedding</a></li>
     <li class="horizontal"><a class="
-notselectedpage" href="portrait.html">Portrait</a></li>
+notselectedpage"  href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a class="
-notselectedpage" href="travel.html">Landscape</a></li>
-    <li class="horizontal"><a href="life.html">Video</a></li>
+notselectedpage"  href="travel.html">Landscape</a></li>
     <li class="horizontal"><a class="
-notselectedpage" href="me.html">Contact</a></div></li>
+notselectedpage"  href="life.html">Video</a></li>
+    <li class="horizontal"><a href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
@@ -91,20 +95,20 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
 <div id="content">
 
-
-    <div id="banner" class="col-12">
+ <div id="banner" class="col-12">
     
 
 
     <picture>
     <source media="(orientation: landscape)"
-    srcset="img/video-banner-flat.jpg" 
+    srcset="img/contact-banner-flat.jpg" 
     />
     <source media="(min-device-width: 800px)"
-    srcset="img/video-banner-flat.jpg" 
+    srcset="img/contact-banner-flat.jpg" 
     />
-    <img src="img/video-banner-800.jpg" id="banner_img">
+    <img src="img/contact-banner-800.jpg" id="banner_img">
     </picture>
+  
         
    
 </div>
