--- a/me.html
+++ b/me.html
@@ -98,10 +98,10 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
     <picture>
     <source media="(orientation: landscape)"
-    srcset="img/video-banner-flat.jpg" 
+    srcset="img/contact215-banner-flat.jpg" 
     />
     <source media="(min-device-width: 800px)"
-    srcset="img/video-banner-flat.jpg" 
+    srcset="img/contact215-banner-flat.jpg" 
     />
     <img src="img/video-banner-800.jpg" id="banner_img">
     </picture>
