--- a/me.html
+++ b/me.html
@@ -100,7 +100,7 @@ notselectedpage" href="me.html">Contact</a></div></li>
     <source media="(orientation: landscape)"
     srcset="img/contact-banner-flat215.jpg" 
     />
-    <source media="(min-device-width: 800px)"
+    <source border="1px solid red" media="(min-device-width: 800px)"
     srcset="img/contact-banner-flat215.jpg" 
     />
     <img src="img/video-banner-800.jpg" id="banner_img">
