--- a/me.html
+++ b/me.html
@@ -96,11 +96,11 @@ notselectedpage" href="me.html">Contact</a></div></li>
     
 
 
-    <picture>
+    <picture border="1px solid red" >
     <source media="(orientation: landscape)"
     srcset="img/contact-banner-flat215.jpg" 
     />
-    <source border="1px solid red" media="(min-device-width: 800px)"
+    <source media="(min-device-width: 800px)"
     srcset="img/contact-banner-flat215.jpg" 
     />
     <img src="img/video-banner-800.jpg" id="banner_img">
