--- a/me.html
+++ b/me.html
@@ -96,14 +96,14 @@ notselectedpage" href="me.html">Contact</a></div></li>
     
 
 
-    <picture border="1px solid red" >
+    <picture >
     <source media="(orientation: landscape)"
     srcset="img/contact-banner-flat215.jpg" 
     />
     <source media="(min-device-width: 800px)"
     srcset="img/contact-banner-flat215.jpg" 
     />
-    <img src="img/video-banner-800.jpg" id="banner_img">
+    <img border="1px solid red"  src="img/video-banner-800.jpg" id="banner_img">
     </picture>
         
    
