--- a/me.html
+++ b/me.html
@@ -98,12 +98,12 @@ notselectedpage" href="me.html">Contact</a></div></li>
 
     <picture >
     <source media="(orientation: landscape)"
-    srcset="img/contact-banner-flat215.jpg" 
+    srcset="img/contact-banner-flat.jpg" 
     />
     <source media="(min-device-width: 800px)"
-    srcset="img/contact-banner-flat215.jpg" 
+    srcset="img/contact-banner-flat.jpg" 
     />
-    <img border="1px solid red"  src="img/video-banner-800.jpg" id="banner_img">
+    <img src="img/contact-banner-800.jpg" id="banner_img">
     </picture>
         
    
