--- a/me.html
+++ b/me.html
@@ -79,9 +79,9 @@ notselectedpage" href="pre-wedding.html">Pre-wedding</a></li>
 notselectedpage" href="portrait.html">Portrait</a></li>
     <li class="horizontal"><a class="
 notselectedpage" href="travel.html">Landscape</a></li>
-    <li class="horizontal"><a href="life.html">Video</a></li>
     <li class="horizontal"><a class="
-notselectedpage" href="me.html">Contact</a></div></li>
+notselectedpage" href="life.html">Video</a></li>
+    <li class="horizontal"><a href="me.html">Contact</a></div></li>
   </ul>
 </div>
 
