--- a/portrait.html
+++ b/portrait.html
@@ -286,6 +286,35 @@ notselectedpage" href="me.html">Contact</a></div></li>
         <a href="photos/portrait/54-1500.jpg" >
             <img src="photos/portrait/54-800.jpg" />
         </a>
+
+
+        <a href="photos/portrait/55-1500.jpg">
+            <img src="photos/portrait/55-800.jpg" />
+        </a>
+        <a href="photos/portrait/56-1500.jpg" >
+            <img src="photos/portrait/56-800.jpg" />
+        </a>
+        <a href="photos/portrait/57-1500.jpg">
+            <img src="photos/portrait/57-800.jpg" />
+        </a>
+        <a href="photos/portrait/58-1500.jpg">
+            <img src="photos/portrait/58-800.jpg" />
+        </a>
+        <a href="photos/portrait/59-1500.jpg">
+            <img src="photos/portrait/59-800.jpg" />
+        </a>
+        <a href="photos/portrait/60-1500.jpg">
+            <img src="photos/portrait/60-800.jpg" />
+        </a>
+        <a href="photos/portrait/61-1500.jpg" >
+            <img src="photos/portrait/61-800.jpg" />
+        </a>
+
+
+
+
+
+
       </div>
 
 
