--- a/portrait.html
+++ b/portrait.html
@@ -310,7 +310,21 @@ notselectedpage" href="me.html">Contact</a></div></li>
             <img src="photos/portrait/61-800.jpg" />
         </a>
 
-
+        <a href="photos/portrait/62-1500.jpg" >
+            <img src="photos/portrait/62-800.jpg" />
+        </a>
+        <a href="photos/portrait/63-1500.jpg" >
+            <img src="photos/portrait/63-800.jpg" />
+        </a>
+        <a href="photos/portrait/64-1500.jpg" >
+            <img src="photos/portrait/64-800.jpg" />
+        </a>
+        <a href="photos/portrait/65-1500.jpg">
+            <img src="photos/portrait/65-800.jpg" />
+        </a>
+        <a href="photos/portrait/66-1500.jpg" >
+            <img src="photos/portrait/66-800.jpg" />
+        </a>
 
 
 
