--- a/travel.html
+++ b/travel.html
@@ -318,6 +318,21 @@ notselectedpage"  href="me.html">Contact</a></div></li>
         <a href="photos/travel/65-1500.jpg" >
             <img src="photos/travel/65-800.jpg" />
         </a>
+
+
+        <a href="photos/travel/66-1500.jpg">
+            <img src="photos/travel/66-800.jpg" />
+        </a>
+        <a href="photos/travel/67-1500.jpg">
+            <img src="photos/travel/67-800.jpg" />
+        </a>
+        <a href="photos/travel/68-1500.jpg" >
+            <img src="photos/travel/68-800.jpg" />
+        </a>
+        <a href="photos/travel/69-1500.jpg" >
+            <img src="photos/travel/69-800.jpg" />
+        </a>
+
       </div>
 
 
