--- a/me.html
+++ b/me.html
@@ -37,11 +37,15 @@
 
 <nav id="drawer">
   <ul>
-    <a href="pre-wedding.html"><li ><div>Pre-wedding</div></li></a>
-    <a href="portrait.html"><li ><div>Portrait</div></li></a>
-    <a href="travel.html"><li ><div>Landscape</div></li></a>
+    <a href="pre-wedding.html"><li class="
+notselectedpage" ><div>Pre-wedding</div></li></a>
+    <a href="portrait.html"><li class="
+notselectedpage" ><div>Portrait</div></li></a>
+    <a href="travel.html"><li class="
+notselectedpage" ><div>Landscape</div></li></a>
     <a href="life.html"><li ><div>Video</div></li></a>
-    <a href="me.html"><li ><div>Contact</div></li></a>
+    <a href="me.html"><li class="
+notselectedpage" ><div>Contact</div></li></a>
 
   </ul>
 </nav>
