--- a/me.html
+++ b/me.html
@@ -43,9 +43,9 @@ notselectedpage" ><div>Pre-wedding</div></li></a>
 notselectedpage" ><div>Portrait</div></li></a>
     <a href="travel.html"><li class="
 notselectedpage" ><div>Landscape</div></li></a>
-    <a href="life.html"><li ><div>Video</div></li></a>
-    <a href="me.html"><li class="
-notselectedpage" ><div>Contact</div></li></a>
+    <a href="life.html"><li class="
+notselectedpage" ><div>Video</div></li></a>
+    <a href="me.html"><li ><div>Contact</div></li></a>
 
   </ul>
 </nav>
