--- a/me.html
+++ b/me.html
@@ -155,7 +155,8 @@ notselectedpage" href="life.html">Video</a></li>
     </div>
 
     <div class="col-12" id="contact-info">
-      <span class="contact-content"><b>Email: </b>yaohermione@gmail.com</span><span class="contact-content"><b>Mobile Phone: </b>+852-6056 9332</span>
+      <span class="contact-content"><b>Email: </b>yaohermione@gmail.com</span>
+      <!--<span class="contact-content"><b>Mobile Phone: </b>+852-6056 9332</span>-->
       <span class="contact-content"><b>Wechat: </b>Yao_Hermione</span>
       <span class="contact-content"><b>Weibo: </b>Hermione_MoveOn</span>
     </div>
