--- a/index.html
+++ b/index.html
@@ -245,9 +245,9 @@
     I grew up in Fuzhou, China. 
     <br>
     After graduating from HKUST,  
-    I am working in HK as an IT engineer and a part-time photographer.
+    I am working in HK as an UI/UX designer and a part-time photographer.
     <br><br>
-    Besides photography, I am also keen on web development, walking dogs and eating spicy hot-pot, etc.  
+    Besides photography, I am also keen on playing the piano, walking dogs and eating spicy hot-pot, etc.  
     <p>
   </div>
 </div>
